--- a/Working_Sheet.ipynb
+++ b/Working_Sheet.ipynb
@@ -12,6 +12,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting torchsummary\n",
+      "  Downloading https://files.pythonhosted.org/packages/7d/18/1474d06f721b86e6a9b9d7392ad68bed711a02f3b61ac43f13c719db50a6/torchsummary-1.5.1-py3-none-any.whl\n",
+      "Installing collected packages: torchsummary\n",
+      "Successfully installed torchsummary-1.5.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install torchsummary"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -78,6 +99,7 @@
    "source": [
     "# Calculate manually the padding layer\n",
     "#ks = 7 , stride =1\n",
+    "# formula for same padding with stride 1 is p = (k-1)/2 , here = (7-1)/2 = 3\n",
     "n = 512\n",
     "pad = 3\n",
     "stride = 1\n",
@@ -102,6 +124,7 @@
    "source": [
     "# Calculate manually the padding layer\n",
     "#ks = 3 , stride =1\n",
+    "# formula for same padding with stride 1 is p = (k-1)/2 , here = (3-1)/2 = 1\n",
     "n = 256\n",
     "pad = 1\n",
     "stride = 1\n",
